--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,12 @@
 }
 
 footer{
-  position: fixed;
-  left: 0;
+  position: sticky;
+  right: 0;
   bottom: 0;
+  left: 0;
   width: 100%;
+  height: -100%;
   background-color: transparent;
   color: white;
   text-align: center;
